# RPi

./: .dlnain-mode.json  .gitignore  .gitleaks.toml  AGENTS.md  ANTIGRAVITY.md  GEMINI.md  LICENSE  README.md  TODO-SYSTEM-OVERHAUL.md  amnesia_mistral_review.md  bench_bt_parse.py  benchmark_results.txt  check_tui.py  chroot-mount.sh  chroot-umount.sh  config.py  fix_provision.py  fix_regex.py  fix_tui.py  fix_tui_modes.py  handlers.py  keys2mpv.py  main.py  mistral_review.md  mode_switcher.py  openapi.yaml  patch_fix.py  patch_js_syntax.py  patch_mock.py  patch_mock2.py  post-deploy-setup.sh  pr_description.md  pyproject.toml  qemu-start.sh  qemu-stop.sh  qwen_review.md  recon_data.md  router.py  run_checks.py  test3.py  (+6 more)
.Jules/: palette.md
.agents/: ORIGINAL_REQUEST.md
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: API.md  ARCHITECTURE.md  README.cz.md  README.md  bluetooth.md  ci-pipeline.md  keys2mpv.cz.md  keys2mpv.md  main.cz.md  main.md  mode-switcher.cz.md  mode-switcher.md  operations.cz.md  operations.md  overview.cz.md  overview.md  testing.cz.md  testing.md  tui.cz.md  tui.md  utilities.cz.md  utilities.md  webserver-8099.cz.md  webserver-8099.md
provisioning/: 01-install-apt-deps.sh  02-install-uv-ytdlp.sh  03-clone-repo.sh  04-setup-venv.sh  05-install-service.sh  06-install-gmrender.sh  README.md  dashboard.service  gmrender-resurrect.service  provision.sh  webserver-8099.service  webserver.service
streaming_setup/: README.md  install-moonlight.sh  install-sunshine-mx.sh
tools/: __init__.py  (+10 more)
(+334 files in other folders)
