[project]
name = "rpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "pytest-asyncio>=1.4.0",
    "textual>=8.2.7",
    "websockets>=12.0",
    "yt-dlp>=2024.10.22",
]

[dependency-groups]
dev = [
    "pylint>=4.0.6",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "pip-audit>=2.6.1",
]
